--- a/food.html
+++ b/food.html
@@ -136,108 +136,24 @@
                 </div>
                 <div class="news_continer">
                     <div class="food_com">
+
                         <div class="food_bg">
                             <div class="food_list_box">
                                 <img src="images/store_logo.jpg">
                             </div>
                             <div class="food_padding">
-                                <div class="food_title">炸雞大獅 Chicken Master</div>
+                                <div class="food_title">招商中</div>
                                 <div class="food_font">
                                     <ul>
-                                        <li>周一至周五：08:00-17:00</li>
-                                        <li>展覽期間：08:00-20:00</li>
-                                        <li>週六及週日：10:00-19:00</li>
-                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
-                                        <li>速食、炸雞及飲料</li>
+                                        <li>周一至周五：XXX</li>
+                                        <li>展覽期間：XXX</li>
+                                        <li>週六及週日：XXX</li>
+                                        <li>分類：XXX</li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="food_bg">
-                            <div class="food_list_box">
-                                <img src="images/store_logo.jpg">
-                            </div>
-                            <div class="food_padding">
-                                <div class="food_title">炸雞大獅 Chicken Master</div>
-                                <div class="food_font">
-                                    <ul>
-                                        <li>周一至周五：08:00-17:00</li>
-                                        <li>展覽期間：08:00-20:00</li>
-                                        <li>週六及週日：10:00-19:00</li>
-                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
-                                        <li>速食、炸雞及飲料</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="food_bg">
-                            <div class="food_list_box">
-                                <img src="images/store_logo.jpg">
-                            </div>
-                            <div class="food_padding">
-                                <div class="food_title">炸雞大獅 Chicken Master</div>
-                                <div class="food_font">
-                                    <ul>
-                                        <li>周一至周五：08:00-17:00</li>
-                                        <li>展覽期間：08:00-20:00</li>
-                                        <li>週六及週日：10:00-19:00</li>
-                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
-                                        <li>速食、炸雞及飲料</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="food_bg">
-                            <div class="food_list_box">
-                                <img src="images/store_logo.jpg">
-                            </div>
-                            <div class="food_padding">
-                                <div class="food_title">炸雞大獅 Chicken Master</div>
-                                <div class="food_font">
-                                    <ul>
-                                        <li>周一至周五：08:00-17:00</li>
-                                        <li>展覽期間：08:00-20:00</li>
-                                        <li>週六及週日：10:00-19:00</li>
-                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
-                                        <li>速食、炸雞及飲料</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="food_bg">
-                            <div class="food_list_box">
-                                <img src="images/store_logo.jpg">
-                            </div>
-                            <div class="food_padding">
-                                <div class="food_title">炸雞大獅 Chicken Master</div>
-                                <div class="food_font">
-                                    <ul>
-                                        <li>周一至周五：08:00-17:00</li>
-                                        <li>展覽期間：08:00-20:00</li>
-                                        <li>週六及週日：10:00-19:00</li>
-                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
-                                        <li>速食、炸雞及飲料</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="food_bg">
-                            <div class="food_list_box">
-                                <img src="images/store_logo.jpg">
-                            </div>
-                            <div class="food_padding">
-                                <div class="food_title">炸雞大獅 Chicken Master</div>
-                                <div class="food_font">
-                                    <ul>
-                                        <li>周一至周五：08:00-17:00</li>
-                                        <li>展覽期間：08:00-20:00</li>
-                                        <li>週六及週日：10:00-19:00</li>
-                                        <li>886-2-2725-5200#5157 ; 886-2-7746-2978</li>
-                                        <li>速食、炸雞及飲料</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
 
                 </div>
