--- a/organizers_item2.html
+++ b/organizers_item2.html
@@ -168,7 +168,7 @@
                     <div class="ed_box"><img src="images/ed21.svg">男回教祈禱室</div>
                     <div class="ed_box"><img src="images/ed22.svg">女回教祈禱室</div>
                 </div>
-                <div class="widget-pic"><img src="images/new_1F.jpg"></div>
+                <div class="widget-pic"><img src="images/1F.jpg"></div>
                 <div class="expo_table">
                     <table width="100%" border="0">
                       <tr>
@@ -217,7 +217,7 @@
                 <div class="widget-pic"><img src="images/biew.jpg"></div>
                 <div class="mod-organizer_title">一樓展場平面圖</div>
 
-                <div class="widget-pic"><img src="images/hallplan.jpg"></div>
+                <div class="widget-pic"><img src="images/new_1F.jpg"></div>
             </div>
 
         </article>
