motifly calender event

--- a/calendar.html
+++ b/calendar.html
@@ -165,7 +165,7 @@
                             </div>
                                 <div class="calen-card_issuse">
                                     <div class="calen-card_date">8/21-8/24</div>
-                                    <div class="calen-title">2019 台灣國際人工智慧暨物聯網展</div>
+                                    <div class="calen-title">2019 台北國際物流暨物聯網展</div>
                                     <div class="calen-font">
                                         <ul>
                                             <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
@@ -185,7 +185,26 @@
                             </div>
                                 <div class="calen-card_issuse">
                                     <div class="calen-card_date">8/21-8/24</div>
-                                    <div class="calen-title">2019 台北國際模具暨模具製造設備暨3D列印展</div>
+                                    <div class="calen-title">2019 台北國際模具暨模具製造設備展</div>
+                                    <div class="calen-font">
+                                        <ul>
+                                            <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
+                                            <li>展覽活動地點：一樓展場</li>
+                                            <li>展覽主辦單位：展昭國際企業股份有限公司</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="calen-card-box">
+                            <div class="calen-card_vrte">
+                                <div class="calen-card_head">
+                                    <div class="calen-pic"><a href="calendar_more4.html"><img src="images/eventa04.jpg"></a></div>
+                                    <div class="calen-card_tab news_blue">展覽</div>
+                                </div>
+                            </div>
+                                <div class="calen-card_issuse">
+                                    <div class="calen-card_date">8/21-8/24</div>
+                                    <div class="calen-title">2019 台灣國際3D列印展</div>
                                     <div class="calen-font">
                                         <ul>
                                             <li>展覽活動期間：2019.08.21 - 2019.08.24</li>
