--- a/calendar_more2.html
+++ b/calendar_more2.html
@@ -128,7 +128,7 @@
 
             <div class="orang_wrapper">
                 <div class="news_continer">
-                    <div class="event_more_title">2019 台灣國際人工智慧暨物聯網展</div>
+                    <div class="event_more_title">2019 台北國際物流暨物聯網展</div>
                     <div class="ticket_poster">
                         <table width="100%" border="0">
                           <tr>
