--- a/conference-room_6f.html
+++ b/conference-room_6f.html
@@ -11,6 +11,7 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="dist/js/jquery-3.2.1.min.js"></script>
     <title></title>
+
 </head>
 
 <body>
@@ -107,74 +108,116 @@
                 <div class="m-page-headerbg"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
-                        <div class="page_headtitle">展覽活動一覽</div>
-                        <div class="page_headtext">南港展覽館2館活動展覽檔期表</div>
+                        <div class="page_headtitle">會議室</div>
+                        <div class="page_headtext">本館最大的特點是位於7樓的多功能會議中心，無柱設計並挑高9公尺的室內空間、全台唯一能透過隔間組合出10種尺寸，使場地能達到最大效能的規劃</div>
                     </div>
                 </div>
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">展覽活動一覽</div>
+                <div class="breadcrumb_title">會議室介紹</div>
                 <div class="twtbreadcrumb">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li><a href="calendar.html">展覽活動一覽</a></li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
-                        <li class="activeddd">2019 台灣機器人與智慧自動化展</li>
+                        <li class="activeddd">會議室</li>
                     </ul>
                 </div>
             </div>
 
             <div class="orang_wrapper">
-                <div class="news_continer">
-                    <div class="event_more_title">2019 台北國際模具暨模具製造設備展</div>
-                    <div class="ticket_poster">
-                        <table width="100%" border="0">
+                <div class="orang_tab">
+                    <ul>
+                        <a href="conference-room.html"><li class="active">會議室介紹</li></a>
+                        <a href="conference-room_item2.html"><li>會議活動剪影</li></a>
+                        <a href="conference-room_item3.html"><li>會議室空檔查詢</li></a>
+                        <a href="conference-room_item4.html"><li>會議室申請流程</li></a>
+                        <a href="conference-room_item5.html"><li>場租試算</li></a>
+                        <a href="conference-room_item6.html"><li>貴賓室</li></a>
+                        <a href="conference-room_item7.html"><li>其他服務</li></a>
+                    </ul>
+                </div>
+                <div class="meetingfloor">
+                    <div class="meeting_bg">
+                        <div class="meet_bluebg"><a href="#"><img src="images/met01.svg"></a></div>
+                        <div class="meet_font"><a href="#">4Ｆ會議室<img src="images/meeticon.svg"></a></div>
+                        <div class="meet_text">401 空間資訊</div>
+                    </div>
+                    <div class="meeting_bg">
+                        <div class="meet_bluebg"><a href="#"><img src="images/met02.svg"></a></div>
+                        <div class="meet_font"><a href="#">6Ｆ會議室<img src="images/meeticon.svg"></a></div>
+                        <div class="meet_text">601、602 空間資訊</div>
+                    </div>
+                    <div class="meeting_bg">
+                        <div class="meet_bluebg"><a href="#"><img src="images/met03.svg"></a></div>
+                        <div class="meet_font"><a href="#">7Ｆ會議室<img src="images/meeticon.svg"></a></div>
+                        <div class="meet_text">701、702、703 空間資訊</div>
+                    </div>
+                </div>
+
+                <div class="mod-organizer_title ">更多資訊請洽886-2-2725-5200分機5527(參展廠商於展覽期間租用會議室請洽展覽主辦單位)。</div>
+                <div class="widget-pic"><img src="images/56f4ce887c05b.jpg"></div>
+
+                <div class="mod-organizer_title ">台北南港展覽館２館 6樓 601會議室空間資訊</div>
+                <div class="confre_table">
+                    <table width="100%" border="0">
                           <tr>
-                            <td width="70%"><img src="images/eventa03.png"></td>
-                            <td width="30%">
-                                <div class="eventpost_title">展覽活動期間：</div>
-                                <div class="news_article">2019.08.21 - 2019.08.24</div>
-                                <div class="eventpost_title">展覽活動地點：</div>
-                                <div class="news_article">一樓展場</div>
-                                <div class="eventpost_title">展覽主辦單位：</div>
-                                <div class="news_article">展昭國際企業股份有限公司</div>
-                                <div class="eventpost_wrap">
-                                    <a href="https://www.autotaiwan.com.tw/" target="_blank">
-                                        <div class="eventpost_btn"><i class="mdi mdi-link-variant"></i>前往官網</div>
-                                    </a>
-                                </div>
-                            </td>
+                            <td width="28%"  class="confre_graydeep">會議室<br /></td>
+                            <td width="72%" class="confre_gray">福軒    內部實景<br /></td>
+                          </tr>
+                          <tr>
+                            <td  class="confre_graydeep">高度／公尺<br /></td>
+                            <td class="confre_gray">3.9<br /></td>
+                          </tr>
+                          <tr>
+                            <td  class="confre_graydeep">面積／m2</td>
+                            <td class="confre_gray">83.5</td>
                           </tr>
                         </table>
-                    </div>
-                    <!-- <div class="mod-organizer_title">票價：</div>
-                    <div class="expo_table">
-                        <div class="ticket_price">
-                            <table width="100%" border="0">
-                              <tr>
-                                <td>VIP區 NT$4,880</td>
-                                <td>A區 NT$3,880</td>
-                                <td>B區 NT$2,880</td>
-                                <td>C區 NT$1,880</td>
-                                <td>身障席 NT$1,440</td>
-                                <td>全區皆為座席</td>
-                              </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="news_article">德億企業（股）公司</div>
-                    <div class="mod-organizer_title">主辦單位：</div>
-                    <div class="news_article">德億企業（股）公司</div>
-                    <div class="mod-organizer_title">協辦單位：</div>
-                    <div class="news_article">火爆娛樂</div>
-                    <div class="mod-organizer_title">贊助單位：</div>
-                    <div class="news_article">車主雜誌、美國職籃、美國職棒、磐石保險經紀人、文森保羅</div>
-                    <div class="mod-organizer_title">售票連結：</div>
-                    <div class="news_article"><a href="https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1">https://iticket.gmusic.com.tw/application/UTK02/UTK0201_.aspx?PRODUCT_ID=N00FRLC1</a></div> -->
                 </div>
+
+                <div class="mod-organizer_title ">容納座位數（由多至少）</div>
+
+                <div class="confre_table">
+                    <table width="100%" border="0">
+                      <tr class="confre_graydeep">
+                        <td>劇場型</td>
+                        <td>標準型</td>
+                        <td>教室型</td>
+                        <td>口字型</td>
+                        <td>馬蹄型</td>
+                      </tr>
+                      <tr class="confre_gray">
+                        <td>60</td>
+                        <td>48</td>
+                        <td>32</td>
+                        <td>28</td>
+                        <td>20</td>
+                      </tr>
+                    </table>
+                </div>
+                <div class="mod-organizer_title ">台北南港展覽館2館 3樓 會議室每時段租金(未稅)</div>
+                <div class="safety_article">08:00-12:00 / 13:00-17:00 / 18:00-22:00</div>
+                <div class="confre_table">
+                    <table width="100%" border="0">
+                      <tr>
+                        <td width="28%" class="confre_graydeep">週一至週五<br /></td>
+                        <td width="72%" class="confre_gray">$12,000<br /></td>
+                      </tr>
+                      <tr>
+                        <td class="confre_graydeep">夜間、例假日及展覽</td>
+                        <td class="confre_gray">$14,400</td>
+                      </tr>
+                    </table>
+                </div>
+
+
+
             </div>
+
+
         </article>
 
 
