--- a/conference-room_6f.html
+++ b/conference-room_6f.html
@@ -141,77 +141,114 @@
                 </div>
                 <div class="meetingfloor">
                     <div class="meeting_bg">
-                        <div class="meet_bluebg"><a href="#"><img src="images/met01.svg"></a></div>
-                        <div class="meet_font"><a href="#">4Ｆ會議室<img src="images/meeticon.svg"></a></div>
+                        <div class="meet_bluebg meet_gray"><a href="conference-room.html"><img src="images/met01.svg"></a></div>
+                        <div class="meet_font"><a href="conference-room.html">4Ｆ會議室<img src="images/meeticon.svg"></a></div>
                         <div class="meet_text">401 空間資訊</div>
                     </div>
                     <div class="meeting_bg">
-                        <div class="meet_bluebg"><a href="#"><img src="images/met02.svg"></a></div>
-                        <div class="meet_font"><a href="#">6Ｆ會議室<img src="images/meeticon.svg"></a></div>
+                        <div class="meet_bluebg"><a href="conference-room_6f.html"><img src="images/met02.svg"></a></div>
+                        <div class="meet_font"><a href="conference-room_6f.html">6Ｆ會議室<img src="images/meeticon.svg"></a></div>
                         <div class="meet_text">601、602 空間資訊</div>
                     </div>
                     <div class="meeting_bg">
-                        <div class="meet_bluebg"><a href="#"><img src="images/met03.svg"></a></div>
-                        <div class="meet_font"><a href="#">7Ｆ會議室<img src="images/meeticon.svg"></a></div>
+                        <div class="meet_bluebg meet_gray"><a href="conference-room_7f.html"><img src="images/met03.svg"></a></div>
+                        <div class="meet_font"><a href="conference-room_7f.html">7Ｆ會議室<img src="images/meeticon.svg"></a></div>
                         <div class="meet_text">701、702、703 空間資訊</div>
                     </div>
                 </div>
+                <div class="safety_article">更多資訊請洽886-2-2725-5200分機5527(參展廠商於展覽期間租用會議室請洽展覽主辦單位)。</div>
 
-                <div class="mod-organizer_title ">更多資訊請洽886-2-2725-5200分機5527(參展廠商於展覽期間租用會議室請洽展覽主辦單位)。</div>
+
+
                 <div class="widget-pic"><img src="images/56f4ce887c05b.jpg"></div>
-
-                <div class="mod-organizer_title ">台北南港展覽館２館 6樓 601會議室空間資訊</div>
+                <div class="mod-organizer_title ">台北南港展覽館2館 6樓 會議室空間資訊</div>
                 <div class="confre_table">
                     <table width="100%" border="0">
                           <tr>
-                            <td width="28%"  class="confre_graydeep">會議室<br /></td>
-                            <td width="72%" class="confre_gray">福軒    內部實景<br /></td>
+                            <td colspan="4" class="confre_graydeep meet_center">台北南港展覽館2館 6樓 會議室每時段租金(未稅)</td>
                           </tr>
                           <tr>
-                            <td  class="confre_graydeep">高度／公尺<br /></td>
-                            <td class="confre_gray">3.9<br /></td>
+                            <td class="confre_gray">會議室</td>
+                            <td>601</td>
+                            <td class="confre_gray">時段區分</td>
+                            <td>08-12 / 13-17 / (夜間)18-22</td>
                           </tr>
                           <tr>
-                            <td  class="confre_graydeep">面積／m2</td>
-                            <td class="confre_gray">83.5</td>
+                            <td class="confre_gray">面積／m2</td>
+                            <td>77</td>
+                            <td class="confre_gray">週一至週五</td>
+                            <td>$7,000</td>
+                          </tr>
+                          <tr>
+                            <td class="confre_gray">尺寸(長x寬x高)</td>
+                            <td>6.5 x 11.8 x 2.9</td>
+                            <td class="confre_gray">夜間、例假日及展覽</td>
+                            <td>$9,100</td>
                           </tr>
                         </table>
                 </div>
-
                 <div class="mod-organizer_title ">容納座位數（由多至少）</div>
-
                 <div class="confre_table">
                     <table width="100%" border="0">
                       <tr class="confre_graydeep">
-                        <td>劇場型</td>
-                        <td>標準型</td>
-                        <td>教室型</td>
-                        <td>口字型</td>
-                        <td>馬蹄型</td>
+                        <td class="meet_center">劇院型</td>
+                        <td class="meet_center">教室型</td>
+                        <td class="meet_center">標準型</td>
                       </tr>
                       <tr class="confre_gray">
-                        <td>60</td>
-                        <td>48</td>
-                        <td>32</td>
+                        <td>39</td>
+                        <td>18</td>
                         <td>28</td>
-                        <td>20</td>
                       </tr>
                     </table>
                 </div>
-                <div class="mod-organizer_title ">台北南港展覽館2館 3樓 會議室每時段租金(未稅)</div>
-                <div class="safety_article">08:00-12:00 / 13:00-17:00 / 18:00-22:00</div>
+
+                <div class="line_gray"></div>
+
+
+                <div class="widget-pic"><img src="images/56f4ce887c05b.jpg"></div>
+                <div class="mod-organizer_title ">台北南港展覽館２館 6樓 會議室空間資訊</div>
                 <div class="confre_table">
                     <table width="100%" border="0">
-                      <tr>
-                        <td width="28%" class="confre_graydeep">週一至週五<br /></td>
-                        <td width="72%" class="confre_gray">$12,000<br /></td>
+                          <tr>
+                            <td colspan="4" class="confre_graydeep meet_center">台北南港展覽館2館 3樓 會議室每時段租金(未稅)</td>
+                          </tr>
+                          <tr>
+                            <td class="confre_gray">會議室</td>
+                            <td>602</td>
+                            <td class="confre_gray">時段區分</td>
+                            <td>08-12 / 13-17 / (夜間)18-22</td>
+                          </tr>
+                          <tr>
+                            <td class="confre_gray">面積／m2</td>
+                            <td>57</td>
+                            <td class="confre_gray">週一至週五</td>
+                            <td>$5,000</td>
+                          </tr>
+                          <tr>
+                            <td class="confre_gray">尺寸(長x寬x高)</td>
+                            <td>6.5 x 8.8 x 2.9</td>
+                            <td class="confre_gray">夜間、例假日及展覽</td>
+                            <td>$6,500</td>
+                          </tr>
+                        </table>
+                </div>
+                <div class="mod-organizer_title ">容納座位數（由多至少）</div>
+                <div class="confre_table">
+                    <table width="100%" border="0">
+                      <tr class="confre_graydeep">
+                        <td class="meet_center">劇院型</td>
+                        <td class="meet_center">教室型</td>
+                        <td class="meet_center">標準型</td>
                       </tr>
-                      <tr>
-                        <td class="confre_graydeep">夜間、例假日及展覽</td>
-                        <td class="confre_gray">$14,400</td>
+                      <tr class="confre_gray">
+                        <td>39</td>
+                        <td>16</td>
+                        <td>26</td>
                       </tr>
                     </table>
                 </div>
+
 
 
 
