--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
             <div id="id_content">
                 <div class="idx_banner">
                     <div class="bnmask"><img src="images/bn_mask.png"></div>
-                    <div class=video-container>
-                        <!-- <iframe src="https://www.youtube.com/embed/WTHr9uDGO18" frameborder="0" allowfullscreen></iframe> -->
-                        <img src="images/index_0723_01.jpg">
+                    <div class="video-container">
+                        <video width="100%" controls src="hall2.mov" Autoplay="autoplay" loop="loop" muted="true">
+                        </video>
                     </div>
                 </div>
                 <div class="ento_bg">
